--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,8 @@ jobs:
           command: |
             . venv/bin/activate
             pytest --cov=slat
+            coverage html
 
-#      - store_artifacts:
-#          path: test-reports
-#          destination: test-reports
+
+      - store_artifacts:
+          path: htmlcov
